# explore-py

./: .env.example  .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/: copilot-instructions.md
apps/fastapi-auth/: pyproject.toml
apps/fastapi-auth/src/fastapi_auth/: auth.py  config.py  main.py  obo.py
apps/fastapi-auth/tests/: __init__.py  conftest.py  test_final.py
apps/testme/: pyproject.toml
apps/testme/src/testme/: __init__.py
apps/web/: package.json
apps/web/app/: page.tsx
apps/web/components/: auth-provider.tsx  login-button.tsx  providers.tsx
src/explore_py/: __init__.py
